--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -543,14 +543,14 @@ For small $p$ the MPI\_Alltoallv is up to 2x faster than MPI\_Isend/MPI\_Irecv v
 \begin{subfigure}[t]{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/weak_scaling_np4000_compare_SpMV_and_comm_n50.png}
-\caption{Weak scaling comparison for $n=50$ and $N_p = 4000$ on a 3D regular grid with maximum resolution $N=4096000$ on Itasca.}
+\caption{Weak scaling comparison for $n=50$ and $N_p = 4000$ on a 3-D regular grid with maximum resolution $N=4096000$ on Itasca.}
 \label{fig:compare_weak_scaling_n50}
 \end{subfigure}
 \quad
 \begin{subfigure}[t]{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_4M_compare_SpMV_and_comm_n50.png}
-\caption{Strong scaling comparison for $n=50$ and $N = 4096000$ on a 3D regular grid on Itasca.}
+\caption{Strong scaling comparison for $n=50$ and $N = 4096000$ on a 3-D regular grid on Itasca.}
 \label{fig:compare_strong_scaling_n50}
 \end{subfigure}
 \caption{Weak and Strong Scaling Improvements}
