--- a/latex/hardware.tex
+++ b/latex/hardware.tex
@@ -9,7 +9,7 @@ Benchmarks in this work were run on a number of platforms. We provide here a sum
 
 %TODO: Memory size
 %TODO: Bandwidth
-%TODO: Peak GFLOPs (double)
+%TODO: Peak GFLOP/sec (double)
 %TODO: Number of cores
 %TODO: Number of multiprocessors
 
