--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -85,7 +85,7 @@ This article continues our effort with an implementation of RBF-FD on both singl
 %
 %Our initial derivation of the Stokes problem was incorrect. What we thought was
 %the proper identity reduced the problem to simple scalar velocity laplacians and
-%pressure gradients. The correct formulation of Stokes flow in 3D would have a
+%pressure gradients. The correct formulation of Stokes flow in 3-D would have a
 %curl component connecting each dimension. 
 %
 %Rather than start over and reformulate our problem, we opted to continue
@@ -95,7 +95,7 @@ This article continues our effort with an implementation of RBF-FD on both singl
 %one problem, we prepare for the other.  
 %
 %\subsection{Details}
-%Items to test for our solver: GFLOPs throughput (CPU,GPU), Convergence of Solver (in
+%Items to test for our solver: GFLOP/sec throughput (CPU,GPU), Convergence of Solver (in
 %iteration residual) vs Preconditioners.
 %
 %Test problems: Sphere coupled poisson. Annulus. Stokes on annulus? 
