--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -92,7 +92,7 @@ As ``meshless" methods, RBF methods excel at solving problems that require geome
 %RBF-FD is a hybrid of RBF scattered data interpolation and classical Finite Difference (FD). It shares many of the benefits from other RBF methods, like functionality on scattered node layouts in any dimension and high-order accurate solutions. Likewise, benefits akin to classical FD such as compact stencils for derivative approximation, and low computational complexity.
 
 %Classical FD derivatives are expressed at a single node (center) as a weighted combination/difference of solution values from a small neighborhood (i.e., a stencil) around the center. Common approximations such as upwind differencing, center differencing, and other higher order approximations are of this form. 
-%In similar fashion, RBF-FD combines solutions values based on stencils, but it does so in a more generalized sense than standard FD. For example, classical FD is typically restricted to regular meshes and often symmetric stencils in practice with the same set of weights for each stencil. Weights can be derived from polynomial expansion and obtained in 1D by solving a Vandermonde interpolation matrix \cite{FornbergLehto11}. Higher dimension FD stencils are composed from combinations of 1D formulas applied to each dimension. This implies restrictions on the shape/layout of stencils. In contrast to this, RBF-FD is designed for stencils with irregular node placement and can easily provide a unique set of weights for each stencil with no restrictions on stencil shape. 
+%In similar fashion, RBF-FD combines solutions values based on stencils, but it does so in a more generalized sense than standard FD. For example, classical FD is typically restricted to regular meshes and often symmetric stencils in practice with the same set of weights for each stencil. Weights can be derived from polynomial expansion and obtained in 1-D by solving a Vandermonde interpolation matrix \cite{FornbergLehto11}. Higher dimension FD stencils are composed from combinations of 1-D formulas applied to each dimension. This implies restrictions on the shape/layout of stencils. In contrast to this, RBF-FD is designed for stencils with irregular node placement and can easily provide a unique set of weights for each stencil with no restrictions on stencil shape. 
 
 %TODO:  \cite{Wright2004, Wright2003, WrightFornberg06, Chandhini2007}. 
 To track the history of RBF methods, one must rewind to 1971 and R.L. Hardy's seminal research on interpolation with multi-quadric basis functions \cite{Hardy1971}. The transition from interpolation to RBF PDE methods dates back to 1990 \cite{Kansa1990a,Kansa1990b}. 
@@ -193,65 +193,67 @@ Stevens et al. \cite{Stevens2009a} mention a parallel implementation under devel
 
 While a number of related works consider RBFs on GPUs, most of the investigations relate to visualization (e.g., \cite{Cuntz2007, Weiler2005}),  surface reconstruction (e.g., \cite{Corrigan2005,Carr2003}), and neural networks (e.g., \cite{Brandstetter2008}). Of these, only \cite{Cuntz2007} uses a modern GPGPU langauge (CUDA), the rest rely on shader languages (i.e., GLSL, HLSL, etc) denoted as ``Other" in Table~\ref{tbl:parallel_rbf_refs}.
 
-The only known applications of GPUs to solve PDEs with RBFs are found in \cite{Gumerov2007a, Gumerov2007b} and \cite{Schmidt2009a, Schmidt2009b}. 
+The only known applications of GPUs to solve PDEs with RBFs are found in \cite{Gumerov2007a, Gumerov2007b,Schmidt2009a, Schmidt2009b}. 
 
-In the case of \cite{Schmidt2009a, Schmidt2009b}, Schmidt et al. compare implementations of a global RBF collocation scheme to a staggered leapfrog FD scheme. The authors solve the 2D (heightfield) shallow water equations for Tsunami simulation with both methods. Time-stepping is controlled by a $4^{th}$ order Runge-Kutta scheme; the same scheme is adopted here. Results for a problem size of $32\times32$ RBF centers show similar error to a $185\times 185$ staggered leapfrog discretization \cite{Schmidt2009b}. 
+In the case of \cite{Schmidt2009a, Schmidt2009b}, Schmidt et al. compare implementations of a global RBF collocation scheme to a staggered leapfrog FD scheme. The authors solve the 2-D (heightfield) shallow water equations for Tsunami simulation with both methods. Time-stepping is controlled by a $4^{th}$ order Runge-Kutta scheme; the same scheme is adopted here. Results for a problem size of $32\times32$ RBF centers show similar error to a $185\times 185$ staggered leapfrog discretization \cite{Schmidt2009b}. 
 Their codes were written in MATLAB and leveraged the AccelerEyes Jacket \cite{JacketGuide2009} add-on to provide wrappers and data structures for internal calls to the NVidia CUDA API. The model was based on a single large dense matrix solve, and with the help of Jacket the authors were able to achieve approximately 7x speedup (no GFLOP/sec provided) over the standard MATLAB solution on the then current generation of the MacBook Pro laptop. The authors compared the laptop CPU (processor details not specified) to the built-in NVidia GeForce 8600M GT GPU. Schmidt et al.'s implementation was the first contribution to the RBF community to leverage accelerators. The results were promising, but no further contribution was made on the topic. 
 
-In \cite{Gumerov2007a, Gumerov2007b}, Gumerov et al. designed a library of FORTRAN wrappers around CUDA that interface with existing code. The wrappers allow existing code bases to leverage GPUs with minimal modification. Wrapping the cuFFT (an FFTW implementation for the GPU \cite{CudaGuide2011}) and cuBLAS libraries the authors present accelerated implementations of both a pseudo-spectral plasma turbulence problem (nonlinear PDE), and a Fast Multipole Method that depends internally on an iterative solution to RBF interpolation. Their Fast Multipole Method is only distantly related to RBF PDE methods discussed in Chapter~\ref{chap:background}. On top of this, the implementation again depends on dense matrix algebra.
+In \cite{Gumerov2007a, Gumerov2007b}, Gumerov et al. designed a library of FORTRAN wrappers around CUDA that interface with existing code. The wrappers allow existing code bases to leverage GPUs with minimal modification. Wrapping the cuFFT (an FFTW implementation for the GPU \cite{CudaGuide2011}) and cuBLAS libraries the authors present accelerated implementations of both a pseudo-spectral plasma turbulence problem (nonlinear PDE), and a Fast Multipole Method that depends internally on an iterative solution to RBF interpolation. Their Fast Multipole Method is only distantly related to the RBF PDE methods discussed in Chapter~\ref{chap:background}. Moreover, the implementation again depends on dense matrix algebra.
 
 
 While our method and \cite{Schmidt2009a,Schmidt2009b,Gumerov2007a, Gumerov2007b} are all based on RBFs, the problems are only distantly related on the GPU. Our work relies on sparse matrix operations, while the others operate on dense matrices. Dense matrix operations have a high computational complexity and are compute-bound problems that can fully utilize the hardware. They are considered ideal (or near to) by linear algebra libraries like BLAS \cite{BLAS} and LAPACK \cite{Lapack1999}, and were demonstrated to fit well on GPUs in the early days of computer graphics, long before NVidia provided the efficient cuBLAS library \cite{CudaToolkitDoc}---a BLAS substitute on the GPU---in the initial public release of CUDA in 2006. In stark contrast to this, sparse problems have much lower computational complexity and are memory bandwidth-bound. Getting good performance on sparse problems requires an entirely different set of rules. 
 
-Earlier this year (2013), Cuomo et al. \cite{Cuomo2013} implemented RBF-interpolation on the GPU for surface reconstruction. Their work is based on an extension of PetRBF \cite{Yokota2010}, and new built-in back-ends that allow GPU access within PETSc (\cite{Minden2010}). PETSc now internally wraps both the CUSP \cite{Cusp2012} (CUDA) and ViennaCL \cite{Rupp2010,Rupp2010a} (OpenCL) projects for sparse matrix algebra on the GPU. With the help of the CUSP backend, Cuomo et al. solve and apply sparse interpolation systems on the GPU for up to three million nodes on an NVidia Fermi C1060 GPU (4GB). They compare results to a single core CPU implementation on an Intel i7-940 CPU and demonstrate that the GPU accelerate their solutions between 6x and 25x. Unfortunately, the authors do not show any evidence of scaling the interpolation to multiple GPUs. Therefore, while evidence exists that PetRBF now has full GPU support, its scalability remains an open question. 
+Earlier this year (2013), Cuomo et al. \cite{Cuomo2013} implemented RBF-interpolation on the GPU for surface reconstruction. Their work is based on an extension of PetRBF \cite{Yokota2010}, and new built-in back-ends that allow GPU access within PETSc (\cite{Minden2010}). PETSc now internally wraps both the CUSP \cite{Cusp2012} (CUDA) and ViennaCL \cite{Rupp2010,Rupp2010a} (OpenCL) projects for sparse matrix algebra on the GPU. With the help of the CUSP backend, Cuomo et al. solve and apply sparse interpolation systems on the GPU for up to three million nodes on an NVidia Fermi C1060 GPU (4GB). They compare results to a single core CPU implementation on an Intel i7-940 CPU and demonstrate that the GPU accelerates their solutions between 6x and 25x. Unfortunately, the authors do not show any evidence of scaling the interpolation to multiple GPUs. Therefore, while evidence exists that PetRBF now has full GPU support, its scalability remains an open question. 
 
 
-Aside from our own investigations, no known efforts apply the GPU to the RBF-FD method. 
+Aside from our own investigations, we know of no other project that applies the GPU to the RBF-FD method. 
 
 
 \subsection{Non-RBF Methods} 
 
 A number of GPU implementations unrelated to RBF methods can provide context for the relevancy of our research.
 
-For example, a single-GPU finite-volume implementation introduced by Corrigan et al. in \cite{Corrigan2009} solves 3D incompressible fluid problems on an unstructured grid. Within their GPU kernels, each element of the unstructured mesh is operated on by a single thread---this design is equivalent to our ``one thread per stencil" test case in Chapter~\ref{chap:gpu_rbffd}. We find that operating with a full warp per stencil is more efficient for stencils $n > 32$. The author's effort to operate on unstructured grids also posed a challenge in that the unstructured elements with random ordering caused considerable slow-down due to non-coalesced memory loads. In response to this, Corrigan et al. reorder their meshes with a fixed-grid method similar to our approach in Chapter~\ref{chap:stencils}. 
+For example, a single-GPU finite-volume implementation introduced by Corrigan et al. in \cite{Corrigan2009} solves 3-D incompressible fluid problems on an unstructured grid. Within their GPU kernels, each element of the unstructured mesh is operated on by a single thread---this design is equivalent to our ``one thread per stencil" test case in Chapter~\ref{chap:gpu_rbffd}. We find that operating with a full warp per stencil is more efficient for stencils $n > 32$. The authors' effort to operate on unstructured grids also posed a challenge in that the unstructured elements with random ordering caused considerable slow-down due to non-coalesced memory loads. In response to this, Corrigan et al. reorder their meshes with a fixed-grid method similar to our approach in Chapter~\ref{chap:stencils}. 
 
-One of the earliest multi-GPU implementations, presented in a series of articles \cite{Goeddeke2007, Goeddeke2008a, Goeddeke2008b, Goeddeke2009a} by G\"{o}ddeke et al. introduced
-a GPU enhanced version of the pre-existing parallel (MPI) multigrid finite element package, FEAST. In \cite{Goeddeke2007} the authors integrated 
+One of the earliest multi-GPU implementations, presented in a series of articles \cite{Goeddeke2007, Goeddeke2008a, Goeddeke2008b, Goeddeke2009a} by G\"{o}ddeke et al., was
+a GPU-enhanced version of the pre-existing distributed (with MPI) multigrid finite element package, FEAST. In \cite{Goeddeke2007} the authors integrated 
 GPUs in a minimally invasive fashion (e.g., farming out local multigrid tasks to the GPU) and considered the weak scalability (i.e., 
 increasing the number of co-processors while keeping the problem size fixed on each processor) on up to 160 compute nodes with a 
-single GPU each.  Since the accelerated routines were implemented below the original FEAST API, it was demonstrated in 
+single GPU each.  Since the accelerated routines were implemented at a lower level than the original FEAST API, it was demonstrated in 
 \cite{Goeddeke2008a} that existing applications built on top of the original FEAST could benefit without code modifications when 
 the 
 new package, FEASTGPU, was substituted. \cite{Goeddeke2008b} compared performance of single-,  double- and 
-mixed-precision calculation within FEASTGPU. The authors then applied FEASTGPU to nonlinear Navier-Stokes 
+mixed-precision calculations within FEASTGPU. The authors then applied FEASTGPU to nonlinear Navier-Stokes 
 problems and 
-found the minimally invasive approach had limited impact on performance in the new setting where computational work was no longer  
-concentrated in GPU-accelerated tasks \cite{Goeddeke2009a}. 
+found that the minimally invasive approach had limited impact on performance in the new setting where computational work was no longer  
+concentrated within GPU-accelerated tasks \cite{Goeddeke2009a}. 
 
+\authnote{Review from here to next section:} 
+At roughly the same time, a number of other efforts around the world started targeting multi-GPU clusters. Many (e.g., \cite{Phillips2009, Thibault2009, Komatitsch2009}) opted to first 
 
-At roughly the same time a number of other efforts around the world started targeting multi-GPU clusters. Many (e.g., \cite{Phillips2009, Thibault2009, Komatitsch2009}) opted to first for non-overlapped communication, only to realize the necessity for overlap in order to increase parallel efficiency. The challenges in multi-GPU computing are: a) to hide transfer latency for memory copies between CPU and GPU (and vice-versa), and b) to shrink the visible communication time, which suddenly appears larger against the accelerated GPU computation.
+for non-overlapped communication, only to realize the necessity for overlap in order to increase parallel efficiency. The challenges in multi-GPU computing are: a) to hide transfer latency for memory copies between CPU and GPU (and vice-versa), and b) to shrink the visible communication time, which suddenly appears larger against the accelerated GPU computation.
 Phillips et al. draw this conclusion based on scaling of their finite-volume method for compressible flow equations on an irregular structured grid on eight quad-core workstations with a total of 32 GPUs. 
-Thibault et al. \cite{Thibault2009} also note the need when modeling 3D incompressible fluids with finite differences on structured grids and a Jacobi iteration. %Their solutions to the lid-driven cavity problem are based on
+Thibault et al. \cite{Thibault2009} also note the need for overlap when modeling 3-D incompressible fluids with finite differences on structured grids and a Jacobi iteration. %Their solutions to the lid-driven cavity problem are based on
 
-In another series of articles, Komatitsch et al. \cite{Komatitsch2009, Komatitsch2010b,Komatitsch2010a} ported a well tuned spectral element code named SPECFEM to the GPU. The code was initially offloaded in \cite{Komatitsch2009} and demonstrated up to 25x speedup over a serial CPU version. In \cite{Komatitsch2010b,Komatitsch2010a} the authors span computation across GPU clusters. Aided by non-blocking MPI communication and a sufficiently large problem, roughly 90\% of communication time is demonstrated to be hidden during weak scaling tests. 
+In another series of articles, Komatitsch et al. \cite{Komatitsch2009, Komatitsch2010b,Komatitsch2010a} ported a well-tuned spectral-element code named SPECFEM to the GPU. The code was initially offloaded in \cite{Komatitsch2009} and demonstrated up to 25x speedup over a serial CPU version. In \cite{Komatitsch2010b,Komatitsch2010a} the authors span computation across GPU clusters. Aided by non-blocking MPI communication and a sufficiently large problem, roughly 90\% of communication time is demonstrated to be hidden during weak scaling tests. 
 
 
  %As the 2003 recipient of the Gordon Bell award, SPECFEM had already undergone a plethora of  fine tuning
 
-Phillips and Fatica overlap communication and computation in \cite{Phillips2010} while solving the Himeno benchmark, a test specifically designed to compare performance of processors based on a memory bound application (in this case the 3-D Poisson problem in generalized coordinates).  
+Phillips and Fatica overlap communication and computation in \cite{Phillips2010} while solving the Himeno benchmark---a test specifically designed to compare performance of processors based on a memory-bound application (in this case the 3-D Poisson problem in generalized coordinates).  
 
 
 Most recently, the PETSc library gained GPU support \cite{Minden2010,YokotaGPU2010}. PETSc is a widely-used library with proven scalability on many supercomputing clusters that provides distributed sparse and dense matrix algebra, Krylov solvers, and preconditioners. 
 
 
-%Meshed methods have received a large amount of attention from the GPU community. For example, Bolz et al. \cite{Bolz2003} implemented conjugate gradient and multigrid kernels for 2D FD incompressible fluid simulation using FD on a single GPU.  More recently, a single GPU, multigrid finite-difference based solver was applied to 3D compressible fluid flow (Euler equations) by Elsen et al. \cite{Elsen2008}.
+%Meshed methods have received a large amount of attention from the GPU community. For example, Bolz et al. \cite{Bolz2003} implemented conjugate gradient and multigrid kernels for 2-D FD incompressible fluid simulation using FD on a single GPU.  More recently, a single GPU, multigrid finite-difference based solver was applied to 3-D compressible fluid flow (Euler equations) by Elsen et al. \cite{Elsen2008}.
 
 
 \section{Major Contributions}
 
 Within this document readers should expect to find the following major contributions: 
 \begin{enumerate} 
-\item The first ever application of a fixed-grid neighbor query algorithm (popularized by distantly related particle methods) to generate stencils for RBF-FD. 
+\item The first application of a fixed-grid neighbor query algorithm (popularized by distantly related particle methods) to generate stencils for RBF-FD. 
 \begin{itemize} 
 \item Performance comparison with the RBF community favorite, $k$-D Tree, shows that the lower complexity fixed-grid method is able to achieve up to 2.5x speedup over the former method on randomly distributed nodes. 
 \item The fixed-grid method is also shown to accelerate RBF-FD time-step performance by up to 5x due spatial locality of node information in memory and improved cache effects.
